now includes an exclude list of files and directories

--- a/config.ini
+++ b/config.ini
@@ -4,12 +4,26 @@
 [app]
 docBlockGeneratorPath = 'Z:\.sys\php\pear\PHP'
 inputDirectory = 'Z:/web/sites/firestorm2/'
+
 [docblock]
-;license = ''
-category = 'TestApplication'
-;author = 'Adam Nicholls'
-;email = 'adamnicholls1987@gmail.com'
-;year = '2012'
+author = 'Adam Nicholls'
+category = 'PHP'
+email = 'adamnicholls1987@gmail.com'
+license = '' ;apache20 | bsd | lgpl21 | mit | php301
+link = 'http://firestorm.ajnicholls.co.uk'
+package = 'Firestorm'
+;see = 'a reference to other things'
+version = '2.01'
+year = '2012'
 
 [filelist]
-;file[] = 'Config.php'
+exclude[] = 'JSMin.class.php'
+exclude[] = 'cssMinifier.class.php'
+
+[dirlist]
+exclude[] = 'inc'
+exclude[] = 'js'
+exclude[] = 'doc'
+exclude[] = 'pages'
+exclude[] = 'tmp'
+exclude[] = 'templates'
